[FIX] width overflow of track title on album player

--- a/widgets/album-player/src/album-player.css
+++ b/widgets/album-player/src/album-player.css
@@ -139,15 +139,36 @@ button {
     }
 }
 
-/* Non-mobile */
-@media screen and (min-width: 450px) {
+/* Tablet (481px to 1024px) */
+@media screen and (min-width: 481px) and (max-width: 1024px) {
+    .floating-player-content {
+        width: 95%;
+        align-self: center;
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+
+    .album-track-title {
+        max-width: 45vw;
+    }
+}
+
+/* Desktop (1025px and above) */
+@media screen and (min-width: 1025px) {
     .floating-player-content {
         width: 75%;
         align-self: center;
         padding-top: 16px;
         padding-bottom: 16px;
     }
+
+    .album-track-title {
+        max-width: 34vw;
+    }
 }
+
+/* Non-mobile */
+@media screen and (min-width: 450px) {}
 
 @keyframes spin {
     0% {
